# ruby-prof

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CHANGES  Gemfile  LICENSE  README  README.md  README.rdoc  Rakefile  TESTING.rdoc  current_failures_windows  ruby-prof.gemspec  todo  zensical.toml
.github/workflows/: docs.yml  testing.yml
benchmarks/: benchmark.rb  benchmark.rb~
docs/: advanced-usage.md  alternatives.md  architecture.md  best-practices.md  getting-started.md  history.md  index.md  profiling-rails.md  reports.md
docs/public/examples/: example.rb  generate_reports.rb
docs/stylesheets/: extra.css
examples/: flat.txt  graph.dot  graph.html  graph.txt  multi.flat.txt  multi.graph.html  multi.stack.html  primes.call_info.txt  primes.callgrind.out.24472  primes.dot  primes.flat.txt  primes.flat_with_lines.txt  primes.graph.html  primes.graph.txt  primes.stack.html  stack.html
ext/: extconf.rb  measure_cpu_time.h  measure_gc_runs.h  measure_memory.h  measure_wall_time.h  ruby_prof.c  ruby_prof.h  version.h
ext/mingw/: Rakefile  build.rake
ext/ruby_prof/: CMakeLists.txt  Makefile  extconf.rb  measure_allocations.h  measure_cpu_time.h  measure_gc_runs.h  measure_gc_time.h  measure_memory.h  measure_process_time.h  measure_wall_time.h  rp_aggregate_call_info.c  rp_aggregate_call_info.h  rp_aggregate_call_tree.c  rp_aggregate_call_tree.h  rp_allocation.c  rp_allocation.h  rp_call_info.c  rp_call_info.h  rp_call_infos.c  rp_call_infos.h  rp_call_tree.c  rp_call_tree.h  rp_call_trees.c  rp_call_trees.h  rp_fast_call_tree_printer.c  rp_fast_call_tree_printer.h  rp_measure.c  rp_measure.h  rp_measure_allocations.c  rp_measure_allocations.h  rp_measure_cpu_time.c  rp_measure_cpu_time.h  rp_measure_gc_runs.c  rp_measure_gc_runs.h  rp_measure_gc_time.c  rp_measure_gc_time.h  rp_measure_memory.c  rp_measure_memory.h  rp_measure_process_time.c  rp_measure_process_time.h  (+19 more)
ext/ruby_prof/mingw/: Rakefile
ext/ruby_prof/vc/: .gitignore  ruby_prof.def  ruby_prof.sln  ruby_prof.vcxproj
ext/ruby_prof/xcode/ruby-prof.xcodeproj/: project.pbxproj
ext/ruby_prof/xcode/ruby-prof.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ext/ruby_prof/xcode/ruby-prof.xcodeproj/project.xcworkspace/xcuserdata/cfis.xcuserdatad/: UserInterfaceState.xcuserstate
ext/ruby_prof/xcode/ruby-prof.xcodeproj/xcshareddata/xcschemes/: ruby-prof.xcscheme
ext/ruby_prof/xcode/ruby_prof/: Info.plist
ext/vc/: ruby_prof.sln  ruby_prof.vcproj
lib/: ruby-prof.rb  unprof.rb
lib/ruby-prof/: abstract_printer.rb  aggregate_call_info.rb  call_info.rb  call_info_visitor.rb  call_stack_printer.rb  call_tree_printer.rb  call_tree_visitor.rb  compatibility.rb  dot_printer.rb  exclude_common_methods.rb  flat_printer.rb  flat_printer_with_line_numbers.rb  graph_html_printer.rb  graph_printer.rb  group_by.rb  measurement.rb  method_info.rb  multi_printer.rb  profile.rb  rack.rb  result.rb  symbol_to_proc.rb  task.rb  test.rb  thread.rb  version.rb  walker.rb
lib/ruby-prof/assets/: call_stack_printer.html.erb  call_stack_printer.js.html  flame_graph_printer.html.erb  flame_graph_printer.lib.css.html  flame_graph_printer.lib.js.html  flame_graph_printer.page.js.html  graph_printer.html.erb  (+1 more)
rails/: profile_test_helper.rb
rails/environment/: profile.rb
rails/example/: example_test.rb
test/: abstract_printer_test.rb  aggregate_test.rb  alias_test.rb  basic_test.rb  block_test.rb  call_info_test.rb  call_info_visitor_test.rb  call_infos_test.rb  call_tree_builder.rb  call_tree_test.rb  call_tree_visitor_test.rb  call_trees_test.rb  current_failures_windows  duplicate_names_test.rb  dynamic_method_test.rb  enumerable_test.rb  exceptions_test.rb  exclude_methods_test.rb  exclude_threads_test.rb  exec_test.rb  fiber_test.rb  gc_test.rb  inverse_call_tree_test.rb  issue137_test.rb  line_number_test.rb  marshal_test.rb  measure_allocations.rb  measure_allocations_test.rb  measure_allocations_trace_test.rb  measure_cpu_time_test.rb  measure_gc_runs_test.rb  measure_gc_time_test.rb  measure_memory_test.rb  measure_memory_trace_test.rb  measure_process_time_test.rb  measure_times.rb  measure_wall_time_test.rb  measurement_test.rb  merge_test.rb  method_elimination_test.rb  (+40 more)
(+32 files in other folders)
